added three navbar font awesome icons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <button type="submit"><i class="fa fa-search"></i></button>
         
             <div class="leftnav">
-                    <a href="#" title="Create a video or post"><i class="fa fa-bandcamp"></i></a>
-                    <a href="#" title="Youtube apps"><i class="fa fa-bandcamp"></i></a>
-                    <a href="#" title="Messages"><i class="fa fa-bandcamp"></i></a>
+                    <a href="#" title="Create a video or post"><i class="fa fa-video-camera"></i></a>
+                    <a href="#" title="Youtube apps"><i class="fa fa-th"></i></a>
+                    <a href="#" title="Messages"><i class="fa fa-envelope"></i></a>
             </div>
         </div>
     </div>
