Finished up the index.html file and now ready to push

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="https://s.ytimg.com/yts/img/favicon-vfl8qSV2F.ico" />
     <title>Youtube Clone</title>
     <link rel="stylesheet" href="youtubestyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,25 +23,85 @@
             <div class="leftnav">
                     <a href="#" title="Create a video or post"><i class="fa fa-video-camera"></i></a>
                     <a href="#" title="Youtube apps"><i class="fa fa-th"></i></a>
-                    <a href="#" title="Messages"><i class="fa fa-envelope"></i></a>
+                    <a href="#" title="Messages"><i class="fa  fa-envelope"></i></a>
             </div>
         </div>
     </div>
     <div class="videobox">
-            <iframe width="650" height="350" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+            <iframe width="650" height="350" src="https://www.youtube.com/embed/V74l_zS1x8E"> </iframe>
             <div class="videoInfo">
                 <p>Contributing to Open Source Part I: The Easy Way</p>
-                <p>The Odin Project</p>
-                <p style="text-align: right;">50,446 views</p>
+                <span style="float: left;background-color: green;"><a href="#" title="Create a video or post"><i class="fa fa-text-width"></i></a></span>
+                <span style="float: left;"> The Odin Project</span>
+                <span style="float: right;">50,446 views</span>
+                <br />
                 <hr>
-                <p>
-                    <a href="#" title="Like"><i class="fa fa-like"></i></a>
-                    <a href="#" title="Dislike"><i class="fa fa-dislike"></i></a>
+                <p style="text-align: right;">
+                    <a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i> 359</a>
+                    <a href="#" title="Dislike"><i class="fa fa-thumbs-o-down"> 14</i></a>
                 </p>
-                
+                <p style="text-align: right;">
+                    <a href="#" class="button">Subscribe</a>
+                </p>
             </div>
     </div>
     <div class="videoList">
+        <p>Up next</p>
+        <div class="vidListing">
+            <a href="https://www.youtube.com/watch?v=cwDqjmSmtMQ">
+                <img src="https://i.ytimg.com/vi/cwDqjmSmtMQ/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLA9EsBPweXfUEfVO47JHrwgf398Ew" alt="">
+                <p>
+                    <span>Programming in Visual Basic .Net How to Connect Access</span> 
+                    <span>17m Views</span>
+                </p>
+            </a>
+        </div>
+        <div class="vidListing">
+                <a href="https://www.youtube.com/watch?v=8mI_Txewg2E">
+                    <img src="https://i.ytimg.com/vi/8mI_Txewg2E/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLC7i3xW6GQ8s7Ara38mc6zoJZR24w" alt="">
+                    <p>
+                        <span>Avengers Endgame MISSING EASTER EGG Search! (Endgame</span> 
+                        <span>2m Views</span>
+                    </p>
+                </a>
+        </div>
+        <div class="vidListing">
+            <a href="https://www.youtube.com/watch?v=-gJ7-G3julw">
+                <img src="https://i.ytimg.com/vi/-gJ7-G3julw/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLDb21-7Xw6Xr3cPZvXkZIUucjFulg" alt="">
+                <p>
+                    <span>Lines In MCU Movies That Mean More Than You Realize</span> 
+                    <span>1.7m Views</span>
+                </p>
+            </a>
+        </div>
+        <div class="vidListing">
+            <a href="https://www.youtube.com/watch?v=bLY45o6rHm0">
+                <img src="https://i.ytimg.com/vi/bLY45o6rHm0/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLCp5OuRZOGE2X3EIjiqLOWETy0dwA" alt="">
+                <p>
+                    <span>Dalai Lama: Last Week Tonight with John Oliver (HBO) </span> 
+                    <span>2.8m Views</span>
+                </p>
+            </a>
+        </div>
+        <div class="vidListing">
+            <a href="https://www.youtube.com/watch?v=eLKVjCFEpv0">
+                <img src="https://i.ytimg.com/vi/eLKVjCFEpv0/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLCchwqBGxUfmJWSqxUBswZmnKTQWA" alt="">
+                <p>
+                    <span>Hulk's Entire MCU Timeline Finally Explained </span> 
+                    <span>1.8m Views</span>
+                </p>
+            </a>
+        </div>
+        <div class="vidListing">
+            <a href="https://www.youtube.com/watch?v=l_htSPGAY7I">
+                <img src="https://i.ytimg.com/vi/l_htSPGAY7I/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLBqz0vRM2o9QDMJc0xDOD6GeBps9g" alt="">
+                <p>
+                    <span>Charter Schools: Last Week Tonight with John Oliver (HBO) </span> 
+                    <span>3.2m Views</span>
+                </p>
+            </a>
+        </div>
+        
     </div>
 </body>
 </html>
